ocs_ci/templates/ocp-deployment/provider-client_network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openshift-storage-egress
  namespace: {}
spec:
  podSelector:
    matchLabels:
      kubevirt.io: virt-launcher
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-storage
  policyTypes:
  - Egress
